# claudeclaw-BANDA

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY.md  package-lock.json  package.json  setup.sh
memory/projects/otzoviki/implementation/otzoviki-kz/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
memory/projects/otzoviki/implementation/otzoviki-kz/config/: urls.py
memory/projects/otzoviki/implementation/otzoviki-kz/docs/: PR_REVIEW_GUIDE.md  company-import-dry-run-pipeline.md  company-import-real-companies-sample.csv  company-import-template.csv  domain-launch-local-ready.md  first-index-batch.md  launch-origin-cdn-bot-qa.md  otzoviki-design-kit.md  production-launch-runbook.md  production-rollback-runbook.md
memory/projects/otzoviki/implementation/otzoviki-kz/templates/: base.html  home.html
memory/projects/otzoviki/implementation/otzoviki-kz/tests/: test_admin_indexability_helpers.py  test_ai_evidence_admin_workflow.py  test_ai_evidence_capture_form.py  test_ai_evidence_models.py  test_ai_public_docs.py  test_analytics_events.py  test_business_forms.py  test_business_models.py  test_business_representative_permissions.py  test_business_source_attribution.py  test_city_service_page.py  test_claim_profile_moderation_admin.py  test_company_dossier_rendering.py  test_company_import_pipeline.py  test_company_indexable_validation.py  test_company_models.py  test_company_publish_gate.py  test_company_publish_readiness_export.py  test_health.py  (+65 more)
(+214 files in other folders)
