[project]
name = "otzoviki-kz"
version = "0.1.0"
description = "Otzoviki KZ SEO-first Django SSR MVP"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.0,<5.3",
  "psycopg[binary]>=3.2",
  "redis>=5",
  "meilisearch>=0.31",
  "django-environ>=0.11",
  "whitenoise>=6.7",
  "gunicorn>=22",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
